login box ajax loading backdrop position fix and background scrolling issue on mobile

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -10438,7 +10438,6 @@ div.breadcrumb-wrapper>ol.breadcrumb .fa{
 	}		
 	.modal-open {
 	    width: 100%;		
-	    overflow-y: auto;
 	    padding-top: 50px;'		
 	}
 	.home-disclaimer{
@@ -10580,7 +10579,6 @@ div.breadcrumb-wrapper>ol.breadcrumb .fa{
     padding:0;
 }
 #loginpopup {
-    display: table;
     height: 100%;
     width:100%;
     top:0;
@@ -10753,6 +10751,9 @@ div.breadcrumb-wrapper>ol.breadcrumb .fa{
 	    width: 100%;
 	    z-index: 999999;
     }
+    #loginpopup .modal-dialog.loginpopupext{
+        margin-bottom: 90px;
+    }
     #loginpopup .modal-dialog{
         height: 100%;
         margin: auto;
@@ -10774,7 +10775,6 @@ div.breadcrumb-wrapper>ol.breadcrumb .fa{
         margin:auto;
         width:100% !important;
         max-width:414px !important;
-        z-index:9999
     }
     #loginpopup .login-info{/*height:235px !important;*/margin-top:50px;/*padding:20px 30px;*/padding:0;text-align:center;flaot:none;}
     #loginpopup .login-info-savie{/*background-image:url(/fwdhk/resources/images/login/savie-mobile.png);*/background-color:#16ab95;}
@@ -10873,9 +10873,6 @@ div.breadcrumb-wrapper>ol.breadcrumb .fa{
 #loginpopup .loginpopupext .login-info-savie img{
 	/*position: absolute;
 	bottom: 0;*/
-}
-.modal-open{
-	overflow-y: auto;
 }
 #loginpopup .loginpopupext .upper-overlay h4{
 	margin-bottom: 10px;
